--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
 		<title>{% block title %}Personal Website{% endblock %}</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
-	<body class="bg-gray-100 min-h-screen">
-		<nav class="bg-gray-800 text-white p-4">
+	<body class="bg-black min-h-screen flex flex-col">
+		<nav class="bg-black text-white p-4">
 			<div class="container mx-auto flex justify-between items-center">
 				<a href="/" class="text-xl font-bold">My Portfolio</a>
 				<div class="space-x-4">
@@ -18,9 +18,9 @@
 			</div>
 		</nav>
 
-		<main class="container mx-auto p-4">{% block content %}{% endblock %}</main>
+		<main class="container mx-auto p-4 flex-grow">{% block content %}{% endblock %}</main>
 
-		<footer class="bg-gray-800 text-white p-4 mt-8">
+		<footer class="bg-black text-white p-4 mt-auto">
 			<div class="container mx-auto text-center">
 				&copy; {{ 'year'|now }} My Portfolio Website
 			</div>
