Refactor blog post handling and add custom styles for improved presentation

--- a/templates/blog/blogPostView.html
+++ b/templates/blog/blogPostView.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}{{ post.title }} | My Blog{% endblock %}
+{% block extracss %}<link rel="stylesheet" href="/static/blogPostStyles.css">{% endblock %}
 
 {% block content %}
 <article class="bg-white shadow-md rounded-lg p-6 mb-8">
