--- a/templates/base.html
+++ b/templates/base.html
@@ -9,15 +9,31 @@
 	</head>
 	<body class="bg-black min-h-screen flex flex-col">
 		<nav class="bg-black text-white p-4">
-			<div class="container mx-auto flex justify-between items-center">
-				<a href="/" class="text-xl font-bold">My Portfolio</a>
-				<div class="space-x-4">
-					<a href="/" class="hover:text-gray-300">Home</a>
-					<a href="/portfolio" class="hover:text-gray-300">Portfolio</a>
-					<a href="/blog" class="hover:text-gray-300">Blog</a>
-				</div>
-			</div>
-		</nav>
+            <div class="container mx-auto flex justify-between items-center">
+                <a href="/" class="text-xl font-bold">My Portfolio</a>
+                
+                <!-- Mobile menu button -->
+                <button id="mobile-menu-button" class="md:hidden focus:outline-none">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
+                </button>
+                
+                <!-- Desktop menu -->
+                <div class="hidden md:flex space-x-4">
+                    <a href="/" class="hover:text-gray-300">Home</a>
+                    <a href="/portfolio" class="hover:text-gray-300">Portfolio</a>
+                    <a href="/blog" class="hover:text-gray-300">Blog</a>
+                </div>
+            </div>
+            
+            <!-- Mobile menu, hidden by default -->
+            <div id="mobile-menu" class="hidden md:hidden mt-2 space-y-2">
+                <a href="/" class="block hover:text-gray-300 py-2">Home</a>
+                <a href="/portfolio" class="block hover:text-gray-300 py-2">Portfolio</a>
+                <a href="/blog" class="block hover:text-gray-300 py-2">Blog</a>
+            </div>
+        </nav>
 
 		<main class="container mx-auto p-4 flex-grow">{% block content %}{% endblock %}</main>
 
@@ -26,5 +42,7 @@
 				&copy; {{ 'year'|now }} My Portfolio Website
 			</div>
 		</footer>
+		<script src="/static/navMenu.js"></script>
+		{% block extrajs %}{% endblock %}
 	</body>
 </html>
